Remove Whitespacing and Fix CSS

--- a/htdocs/PT5/CSS_files/CustomerInsertEditDesign.css
+++ b/htdocs/PT5/CSS_files/CustomerInsertEditDesign.css
@@ -1,5 +1,5 @@
 body{
-    margin: 175px auto;
+    margin: 300px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -30,13 +30,11 @@ input::-webkit-inner-spin-button {
 
 #TitleText{
     position: absolute;
-    text-align: center;
 
-    margin-bottom: 50px;
+    color: #86c232;
 
-    color: white;
+    top: 175px;
 }
-
 
 #CenterTable{
     position: relative;
@@ -56,7 +54,6 @@ input::-webkit-inner-spin-button {
     box-shadow: 0 0 50px 15px rgba(49,61,67,1);
 
     position: relative;
-    top: 150px;
 
     height: 250px;
     width: 475px;
