--- a/htdocs/PT5/CSS_files/ProductInsertEditDesign.css
+++ b/htdocs/PT5/CSS_files/ProductInsertEditDesign.css
@@ -1,5 +1,5 @@
 body{
-    margin: 175px auto;
+    margin: 300px auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -40,11 +40,10 @@ input::-webkit-inner-spin-button {
 
 #TitleText{
     position: absolute;
-    text-align: center;
 
-    margin-bottom: 50px;
+    color: #86c232;
 
-    color: white;
+    top: 175px;
 }
 
 
@@ -66,7 +65,6 @@ input::-webkit-inner-spin-button {
     box-shadow: 0 0 50px 15px rgba(49,61,67,1);
 
     position: relative;
-    top: 150px;
 
     height: 250px;
     width: 475px;
